sample-webpack/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-webpack
    app.kubernetes.io/name: sample-webpack
  name: sample-webpack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-webpack.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-webpack
              servicePort: 80
            path: /
    - host: sample-webpack.demo.nalbam.com
      http:
        paths:
          - backend:
              serviceName: sample-webpack
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-webpack.demo.mzdev.be
      secretName: sample-webpack-mzdev-tls
    - hosts:
        - sample-webpack.demo.nalbam.com
      secretName: sample-webpack-nalbam-tls
